# app/models/vehicle.rb
@@ -2,7 +2,7 @@ class Vehicle < ApplicationRecord
   belongs_to :driver
   has_many :rides
 
-  validates :model, :registration_number, presence: true
+  validates :model, :registration_number, :driver_id, :available_time, presence: true
 
   def available?(start_time, end_time)
     overlapping_rides = rides.where('(start_time >= ? AND start_time <= ?) OR (end_time >= ? AND end_time <= ?)', start_time, end_time, start_time, end_time)
@@ -26,11 +26,19 @@ class Vehicle < ApplicationRecord
   def self.create_vehicle(params)
     vehicle = Vehicle.new(params)
     vehicle.save
+    if vehicle.save
+      { valid?: true, vehicle: vehicle }
+    else
+      { valid?: false, errors: vehicle.errors.full_messages }
+    end
   end
 
   def update_vehicle(params)
-    update(params)
-    self
+    if update(params)
+      { valid?: true, vehicle: self }
+    else
+      { valid?: false, errors: errors.full_messages }
+    end
   end
 
   def self.destroy_vehicle(vehicle)
