# swagger/v1/swagger.yaml
@@ -270,30 +270,27 @@ paths:
                   $ref: "#/components/schemas/Driver"
 
     post:
-        summary: "Create a new driver"
-        tags:
-          - "Drivers"
-        requestBody:
-          required: true
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  driver:
-                    type: "object"
-                    properties:
-                      driver_name:
-                        type: "string"
-                    required:
-                      - driver_name
-        responses:
-          '201':
-            description: "Driver created successfully"
-          '400':
-            description: "Invalid request"
-          '500':
-            description: "Server error"
+      summary: "Create a new driver"
+      tags:
+        - "Drivers"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: "object"
+              properties:
+                driver_name:
+                  type: "string"
+              required:
+                - driver_name
+      responses:
+        '201':
+          description: "Driver created successfully"
+        '400':
+          description: "Invalid request"
+        '500':
+          description: "Server error"
 
   /api/v1/drivers/{id}:
     get:
@@ -301,7 +298,7 @@ paths:
       tags:
         - "Drivers"
       parameters:
-        - driver_name: id
+        - name: id
           in: path
           required: true
           schema:
@@ -319,7 +316,7 @@ paths:
       tags:
         - "Drivers"
       parameters:
-        - driver_name: id
+        - name: id
           in: path
           required: true
           schema:
@@ -331,13 +328,10 @@ paths:
             schema:
               type: "object"
               properties:
-                driver:
-                  type: "object"
-                  properties:
-                    diver_name:
-                      type: "string"
-                  required:
-                    - driver_name
+                driver_name:
+                  type: "string"
+              required:
+                - driver_name
       responses:
         '200':
           description: "Driver updated successfully"
@@ -348,7 +342,7 @@ paths:
       tags:
         - "Drivers"
       parameters:
-        - driver_name: id
+        - name: id
           in: path
           required: true
           schema:
@@ -397,31 +391,32 @@ paths:
           description: "OK"
 
   /api/v1/user_ratings:
-    post:
-      summary: "Create a user rating"
+    get:
+      summary: "Retrieve user ratings"
       tags:
         - "User Ratings"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: "object"
-              properties:
-                user_id:
-                  type: "integer"
-                rating:
-                  type: "integer"
-              required:
-                - user_id
-                - rating
       responses:
         '200':
-          description: "User rating created successfully"
+          description: "OK"
 
   /api/v1/user_ratings/{id}:
     get:
       summary: "Retrieve a specific user rating"
+      tags:
+        - "User Ratings"
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: "OK"
+
+  /api/v1/user_ratings/{id}/average_rating_for_user:
+    get:
+      summary: "Get average rating for a specific user"
       tags:
         - "User Ratings"
       parameters:
@@ -442,26 +437,8 @@ paths:
       responses:
         '200':
           description: "OK"
-          content:
-            application/json:
-              schema:
-                type: "array"
-                items:
-                  type: "object"
-                  properties:
-                    id:
-                      type: "integer"
-                    model:
-                      type: "string"
-                    registration_number:
-                      type: "string"
-                    driver_id:
-                      type: "integer"
-                    available_time:
-                      type: "string"
-                      format: "date-time"
-                      
- post:
+
+    post:
       summary: "Create a new vehicle"
       tags:
         - "Vehicles"
@@ -472,30 +449,23 @@ paths:
             schema:
               type: "object"
               properties:
-                vehicle:
-                  type: "object"
-                  properties:
-                    model:
-                      type: "string"
-                    registration_number:
-                      type: "string"
-                    driver_id:
-                      type: "integer"
-                    available_time:
-                      type: "string"
-                      format: "date-time"
-                  required:
-                    - model
-                    - registration_number
-                    - driver_id
-                    - available_time
+                model:
+                  type: "string"
+                registration_number:
+                  type: "string"
+                driver_id:
+                  type: "integer"
+                available_time:
+                  type: "string"
+                  format: "date-time"
+              required:
+                - model
+                - registration_number
+                - driver_id
+                - available_time
       responses:
         '201':
           description: "Vehicle created successfully"
-        '400':
-          description: "Invalid request"
-        '500':
-          description: "Server error"
 
   /api/v1/vehicles/{id}:
     get:
@@ -511,14 +481,6 @@ paths:
       responses:
         '200':
           description: "OK"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  id:
-                    type: "integer"
-
 
     put:
       summary: "Update a vehicle"
@@ -537,19 +499,15 @@ paths:
             schema:
               type: "object"
               properties:
-                name:
-                  type: "string"
-                make:
-                  type: "string"
                 model:
                   type: "string"
-                year:
+                registration_number:
+                  type: "string"
+                driver_id:
                   type: "integer"
-              required:
-                - name
-                - make
-                - model
-                - year
+                available_time:
+                  type: "string"
+                  format: "date-time"
       responses:
         '200':
           description: "Vehicle updated successfully"
@@ -565,5 +523,5 @@ paths:
           schema:
             type: integer
       responses:
-        '204':
+        '200':
           description: "Vehicle deleted successfully"
